--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "soundcloud",
+  "name": "mysoundcloud",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-icons": "^3.10.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-transition-group": "^4.4.1",
+    "sass": "^1.26.10",
+    "soundcloud": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
